option java_package="com.jiang.framework.message";
option java_outer_classname="MessageProto";

message messageEnum{
	enum MessageID{
		C_USER_LOGIN=10001;
		S_USER_LOGIN=10002;
	}
}